feat: auto-discover ingredient types, typed header icons, viewer cache overhaul