@@ -6,9 +6,9 @@ import com.starskyxiii.collapsible_groups.client.widget.UiSkinRenderer;
 
 import com.starskyxiii.collapsible_groups.group.GroupTheme;
 import com.starskyxiii.collapsible_groups.group.GroupThemeColors;
+import com.starskyxiii.collapsible_groups.compat.jei.preview.GroupPreviewEntry;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.world.item.ItemStack;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -116,10 +116,9 @@ public final class GroupSampleRenderer {
 	 * @return the full preview layout for hit-testing page buttons and header toggles.
 	 */
 	public static Layout render(GuiGraphics g, Rect area, boolean expanded, int page, GroupTheme theme,
-	                            List<ItemStack> headerIcons, List<ItemStack> items,
+	                            List<GroupPreviewEntry> headerIcons, List<GroupPreviewEntry> items,
 	                            Font font, Fallbacks fallbacks) {
-		List<ItemStack> nonEmpty = filterNonEmpty(items);
-		Layout layout = layout(area, expanded, nonEmpty.size(), page);
+		Layout layout = layout(area, expanded, items.size(), page);
 
 		int expandedGroupBg = GroupThemeColors.expandedGroupBackground(theme, fallbacks.expandedGroupArgb());
 		int border = GroupThemeColors.expandedGroupBorder(theme, fallbacks.expandedBorderArgb());
@@ -132,13 +131,13 @@ public final class GroupSampleRenderer {
 			Rect rect = cell.rect();
 			if (cell.header()) {
 				g.fill(rect.x() - 1, rect.y() - 1, rect.x() + 17, rect.y() + 17, headerBg);
-				renderStackedItemIcons(g, filterNonEmpty(headerIcons), rect.x(), rect.y(), expanded, font);
+				renderStackedIcons(g, headerIcons, rect.x(), rect.y(), expanded, font);
 				if (expanded) {
 					borderPositions.add(new int[]{rect.x(), rect.y()});
 				}
 			} else {
 				g.fill(rect.x() - 1, rect.y() - 1, rect.x() + 17, rect.y() + 17, expandedGroupBg);
-				g.renderItem(nonEmpty.get(cell.itemIndex()), rect.x(), rect.y());
+				items.get(cell.itemIndex()).render(g, rect.x(), rect.y());
 				borderPositions.add(new int[]{rect.x(), rect.y()});
 			}
 		}
@@ -162,23 +161,18 @@ public final class GroupSampleRenderer {
 		return layout;
 	}
 
-	/**
-	 * Draws up to two item icons stacked with a {@code +}/{@code -} indicator,
-	 * mirroring {@code GroupIconRenderer} (scale 0.9, offsets (2,0)/(0,2)).
-	 */
-	public static void renderStackedItemIcons(GuiGraphics g, List<ItemStack> items, int x, int y,
-	                                          boolean expanded, Font font) {
-		List<ItemStack> nonEmpty = filterNonEmpty(items);
-		if (!nonEmpty.isEmpty()) {
+	public static void renderStackedIcons(GuiGraphics g, List<GroupPreviewEntry> entries, int x, int y,
+	                                      boolean expanded, Font font) {
+		if (!entries.isEmpty()) {
 			g.pose().pushPose();
 			g.pose().translate(x, y, 0);
 			g.pose().scale(0.9f, 0.9f, 0.9f);
-			if (nonEmpty.size() == 1) {
-				g.renderItem(nonEmpty.get(0), 1, 1);
+			if (entries.size() == 1) {
+				entries.getFirst().render(g, 1, 1);
 			} else {
-				g.renderItem(nonEmpty.get(1), 2, 0);
+				entries.get(1).render(g, 2, 0);
 				g.pose().translate(0, 0, 10);
-				g.renderItem(nonEmpty.get(0), 0, 2);
+				entries.getFirst().render(g, 0, 2);
 			}
 			g.pose().popPose();
 		}
@@ -202,13 +196,4 @@ public final class GroupSampleRenderer {
 		return Math.max(min, Math.min(max, value));
 	}
 
-	private static List<ItemStack> filterNonEmpty(List<ItemStack> items) {
-		List<ItemStack> out = new ArrayList<>();
-		for (ItemStack stack : items) {
-			if (stack != null && !stack.isEmpty()) {
-				out.add(stack);
-			}
-		}
-		return out;
-	}
 }
